--- a/action.yml
+++ b/action.yml
@@ -4,7 +4,7 @@ inputs:
   version:  # id of input
     description: 'Version of IBM Cloud CLI to download'
     required: true
-    default: 'latest'
+    default: '2.1.1'
 runs:
   using: 'node12'
   main: 'dist/index.js'
